--- a/backend/mo/ic_vetkeys/mops.toml
+++ b/backend/mo/ic_vetkeys/mops.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ic-vetkeys"
-version = "0.2.0"
+version = "0.3.0"
 repository = "https://github.com/dfinity/vetkeys/backend/mo/ic_vetkeys"
 description = "A set of tools designed to help canister developers integrate vetKeys into their Internet Computer (ICP) applications"
 keywords = [
@@ -11,12 +11,12 @@ keywords = [
   "signature",
   "bls",
   "key-derivation",
-  "ibe",
+  "ibe"
 ]
 license = "Apache-2.0"
 
 [dependencies]
-base = "0.14.6"
+base = "0.14.9"
 
 [dev-dependencies]
 test = "2.1.1"
