--- a/examples/encrypted_notes_dapp_vetkd/frontend/package.json
+++ b/examples/encrypted_notes_dapp_vetkd/frontend/package.json
@@ -57,6 +57,7 @@
     "@dfinity/identity": "^2.1.3",
     "@dfinity/principal": "^2.1.3",
     "@dfinity/vetkeys": "^0.3.0",
+    "isomorphic-dompurify": "^2.25.0",
     "sirv-cli": "^1.0.0",
     "svelte-icons": "^2.1.0",
     "svelte-router-spa": "^6.0.3",
