--- a/examples/basic_bls_signing/frontend/package.json
+++ b/examples/basic_bls_signing/frontend/package.json
@@ -13,11 +13,13 @@
     "devDependencies": {
         "@eslint/js": "^9.24.0",
         "@rollup/plugin-typescript": "^12.1.2",
+        "@types/node": "^24.0.10",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.4.0",
         "tslib": "^2.8.1",
         "typescript": "~5.7.2",
+        "typescript-eslint": "^8.35.1",
         "vite": "^6.2.0",
         "vite-plugin-environment": "^1.1.3"
     },
