--- a/examples/basic_ibe/frontend/package.json
+++ b/examples/basic_ibe/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^5.4.0",
     "tslib": "^2.8.1",
     "typescript": "~5.7.2",
+    "typescript-eslint": "^8.35.1",
     "vite": "^6.3.4",
     "vite-plugin-environment": "^1.1.3"
   },
