--- a/examples/password_manager/frontend/package.json
+++ b/examples/password_manager/frontend/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^4.2.19",
     "tslib": "^2.8.1",
+    "typescript-eslint": "^8.35.1",
     "vite": "^5.4.19",
     "vite-plugin-environment": "^1.1.3"
   },
