--- a/backend/rs/canisters/ic_vetkeys_encrypted_maps_canister/Cargo.toml
+++ b/backend/rs/canisters/ic_vetkeys_encrypted_maps_canister/Cargo.toml
@@ -22,7 +22,9 @@ ic-vetkeys = "0.3.0"
 serde = "1.0.217"
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 pocket-ic = "9.0.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reqwest = "0.12.12"
+strum = "0.27.1"
