--- a/examples/basic_bls_signing/frontend/public/.ic-assets.json5
+++ b/examples/basic_bls_signing/frontend/public/.ic-assets.json5
@@ -1,9 +1,9 @@
 [
-    {
-        "match": "**/*",
-        "security_policy": "standard",
-        headers: {
-            'Content-Security-Policy': "script-src 'self' 'wasm-unsafe-eval';"
-        }
-    }
+  {
+    match: "**/*",
+    security_policy: "hardened",
+    headers: {
+      "Content-Security-Policy": "default-src 'self';script-src 'self';connect-src 'self' http://localhost:* https://icp0.io https://*.icp0.io https://icp-api.io;img-src 'self';object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
+    },
+  },
 ]
