--- a/examples/password_manager_with_metadata/frontend/public/.ic-assets.json5
+++ b/examples/password_manager_with_metadata/frontend/public/.ic-assets.json5
@@ -5,5 +5,6 @@
         headers: {
             "Content-Security-Policy": "default-src 'self';script-src 'self';connect-src 'self' http://localhost:* https://icp0.io https://*.icp0.io https://icp-api.io;img-src 'self' data:;style-src * 'unsafe-inline';object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
         },
+        allow_raw_access: false
     },
 ]
